--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
     <div class="field">
       <%= f.label :start_date %><br />
-      <%= f.date_select :start_date %>
+      <%= f.text_field :start_date, :id => 'inputDate', :class => 'inputDate' %>
     </div>
     <div class="field">
       <%= f.label :iteration_start_day %><br />
